# jgraph

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  TODOS.md  compose.dev.yml  compose.yml  eslint.config.js  index.ts  lefthook.yml  package.json  tsconfig.json
.changeset/: floppy-doodles-bake.md  grumpy-worms-press.md  spicy-colts-stare.md
.github/workflows/: ci.yml  release.yml
engine/: Cargo.toml  Dockerfile
engine/crates/juggling-tools/: Cargo.toml  README.md  clippy.toml
engine/crates/juggling-tools/src/: lib.rs  util.rs
engine/crates/juggling-tools/src/state_notation/: compute.rs  graph.rs  mod.rs  state.rs  table.rs  throws.rs  transition.rs
engine/src/: cli.rs  graph.rs  logging.rs  main.rs  params.rs  state.rs  state_set.rs  transition.rs
engine/src/cache/: file.rs  memory.rs  mod.rs  precompute.rs  redis.rs
engine/src/routes/: graphs.rs  health.rs  mod.rs  table.rs
mvp/: bun.lockb
scripts/: dev.ts
server/: Dockerfile  package.json
server/drizzle/meta/: 0002_snapshot.json  _journal.json
server/scripts/: seed.ts
server/src/: index.ts
server/src/db/: index.ts
server/src/lib/: auth.ts  email-templates.ts  email.ts  logging.ts  schemas.ts
server/src/routes/: index.ts
web/: Caddyfile  Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.ts
web/messages/: de.json  en.json  es.json  fr.json  nl.json  zh.json
web/project.inlang/: settings.json
web/src/: index.css  routeTree.gen.ts
web/src/components/: auth-page-layout.tsx  footer-panel.tsx  form-field.tsx  (+2 more)
(+86 files in other folders)
