[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = "0.1"
